# snaskii22

./: .editorconfig  .gitignore  AUTHORS  CODE_OF_CONDUCT.md  ChangeLog.md  Makefile.am  README.md  TODO  bootstrap.sh  configure.ac  flake.nix  shell.nix
.github/workflows/: c-cpp.yml
doc/: CONTRIBUTING.md.backup
docs/: CONTRIBUINDO.md  CONTRIBUTING.md  CONTRIBUTING.md~
nix/: default.nix  shell.nix
scenes/: Makefile.am
scenes/death/: scene-0000001.txt
scenes/game/: scene-0000001.txt
scenes/intro/: scene-0000001.txt  scene-0000002.txt  scene-0000003.txt  scene-0000004.txt  scene-0000005.txt  scene-0000006.txt  scene-0000007.txt  scene-0000008.txt  scene-0000009.txt  scene-0000010.txt  scene-0000011.txt  scene-0000012.txt  scene-0000013.txt  scene-0000014.txt  scene-0000015.txt  scene-0000016.txt  scene-0000017.txt  scene-0000018.txt  scene-0000019.txt  scene-0000020.txt  scene-0000021.txt  scene-0000022.txt  scene-0000023.txt  scene-0000024.txt  scene-0000025.txt  scene-0000026.txt  scene-0000027.txt  scene-0000028.txt  scene-0000029.txt  scene-0000030.txt  scene-0000031.txt  scene-0000032.txt  scene-0000033.txt  scene-0000034.txt  scene-0000035.txt  scene-0000036.txt  scene-0000037.txt  scene-0000038.txt  scene-0000039.txt  scene-0000040.txt  (+444 more)
scenes/menu/: scene-0000001.txt  scene-0000002.txt
scenes/win/: scene-0000001.txt
src/: Makefile.am  defines.h  graphics.c  graphics.h  movie.c  movie.h  scene.c  scene.h  snake.c  snake.h  snaskii.c  snaskii.sh  times.c  times.h  utils.c  utils.h
src/.deps/: snaskii-snaskii.Po  snaskii-utils.Po  snaskii.Po
