##   Automake.am - Automake script
##
##   Copyright (c) 2021 - Monaco F. J. <monaco@usp.br>
##
##   This file is part of Snaskii
##
##   Snaskii is free software: you can redistribute it and/or modify
##   it under the terms of the GNU General Public License as published by
##   the Free Software Foundation, either version 3 of the License, or
##   (at your option) any later version.
##
##   This program is distributed in the hope that it will be useful,
##   but WITHOUT ANY WARRANTY; without even the implied warranty of
##   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
##   GNU General Public License for more details.
##
##   You should have received a copy of the GNU General Public License
##   along with this program.  If not, see <http://www.gnu.org/licenses/>.



snaskii_introdir = $(datadir)/snaskii/intro

include $(srcdir)/intro.am
dist_snaskii_intro_DATA = $(intro_scenes)

snaskii_gamedir = $(datadir)/snaskii/game
dist_snaskii_game_DATA = game/scene-0000001.txt


