# Automake.am - Automake script
#
# Copyright (c) 2021 - Monaco F. J. <monaco@usp.br>
# SPDX-License-Identifier: GPL-3.0-only
#



snaskii_introdir = $(datadir)/snaskii/intro

include $(srcdir)/intro.am
dist_snaskii_intro_DATA = $(intro_scenes)

snaskii_gamedir = $(datadir)/snaskii/game
dist_snaskii_game_DATA = game/scene-0000001.txt


